# cathsim-segment

./: .gitignore  README.md  pyproject.toml
lightning_logs/version_4/: events.out.tfevents.1723216716.pop-os.150515.0
notebooks/: attention_net_experim.ipynb  image_manipulation.ipynb  segment_catherer.ipynb
notebooks/.virtual_documents/: image_manipulation.ipynb  segment_catherer_train_unet.ipynb
scratch/img2caption/: model.py
scratch/transformer/: img2caption.py  network.py  test.py
sgsdoust/notebooks/: segment_catherer_train_mobileunet.ipynb
src/cathseg/: callbacks.py  custom_modules.py  dataset.py  metrics.py  utils.py
src/cathseg/attention/: hyperparams.py  train.py  (+1 more)
wandb/: latest-run
wandb/offline-run-20240809_162137-q4zwchcp/: run-q4zwchcp.wandb
wandb/offline-run-20240809_163652-bypslst9/: run-bypslst9.wandb
wandb/run-20240809_164200-fgh9r80q/: run-fgh9r80q.wandb
wandb/run-20240809_164947-22cddh1y/: run-22cddh1y.wandb
wandb/run-20240809_165155-xi0omojz/: run-xi0omojz.wandb
wandb/run-20240809_170309-eqirfzgx/: run-eqirfzgx.wandb
wandb/run-20240812_103141-4dhn9uuj/: run-4dhn9uuj.wandb
wandb/run-20240812_133830-2gm6oxn2/: run-2gm6oxn2.wandb
wandb/run-20240812_152447-43s2ivdc/: run-43s2ivdc.wandb
wandb/run-20240813_132645-3dzs5le7/: run-3dzs5le7.wandb
wandb/run-20240813_134753-ssywkpoq/: run-ssywkpoq.wandb
wandb/run-20240813_140247-so3awadj/: run-so3awadj.wandb
wandb/run-20240813_140837-d8u29nd7/: run-d8u29nd7.wandb
wandb/run-20240813_142131-lclka9rh/: run-lclka9rh.wandb
wandb/run-20240813_150906-d2t31yj6/: run-d2t31yj6.wandb
(+143 files in other folders)
