[project]
name = "cathsim-segment"
version = "0.1.dev1"
description = "Endovascular simulator for autonomy development"
readme = "README.md"
# Homepage = "https://robotvisionlabs.github.io/cathsim/"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/robotvisionlabs/cathsim"
license = { file = "LICENSE" }
authors = [
    {name = "Tudor Jianu", email = "tudorjnu@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorboard",
    "numpy",
    "torch",
    "torchvision",
    "pytorch-lightning",
    "guide3d@git+https://github.com/airvlab/guide3d.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
run_env = "cathsim.console:cmd_run_env"
visualize_agent = "cathsim.console:cmd_visualize_agent"
train = "cathsim.console:cmd_train"
